# Gstreamer-Video-Compositer

./: .gitignore  CMakeLists.txt  README.md  commands.md  video_compositor.c
